--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">People Tracker</string>
+    <string name="title_activity_signin">Sign in</string>
 
     <!-- Strings related to login -->
     <string name="prompt_email">Email</string>
@@ -13,4 +14,7 @@
     <string name="permission_rationale">"Contacts permissions are needed for providing email
         completions."
     </string>
+    <string name="title_activity_signup">SignupActivity</string>
+    <string name="title_activity_password">PasswordActivity</string>
+    <string name="title_activity_name">NameActivity</string>
 </resources>
